Updating DP posterior notebook

--- a/notebooks/test-random-stuff.ipynb
+++ b/notebooks/test-random-stuff.ipynb
@@ -2,21 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "01fa0923",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You are running the v4 development version of PyMC3 which currently still lacks key features. You probably want to use the stable v3 instead which you can either install via conda or find on the v3 GitHub branch: https://github.com/pymc-devs/pymc3/tree/v3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, \"/Users/larryshamalama/Documents/GitHub/pymc3\")\n",
+    "sys.path.insert(0, \"../../../pymc3\")\n",
     "\n",
     "import numpy as np\n",
     "import pymc3 as pm\n",
@@ -28,12 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f9d1e9af",
+   "execution_count": 67,
+   "id": "a37ae7e2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = np.array([-1])\n",
+    "X = np.array([-1, 0.5, 1])\n",
     "K = 20\n",
     "\n",
     "def stick_breaking(betas):\n",
@@ -44,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e82720a",
+   "id": "2c8dadb2",
    "metadata": {},
    "source": [
     "### Testing GP submodule\n",
@@ -55,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "448f0e96",
+   "id": "4c71f649",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4156a942",
+   "id": "bf165ee8",
    "metadata": {},
    "source": [
     "### Trying to sample from a DP Prior"
@@ -122,8 +114,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "25e54100",
+   "execution_count": 55,
+   "id": "f082fbcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([10., 5, 1, 4])\n",
+    "a = np.atleast_2d(a)\n",
+    "\n",
+    "b = np.array([1, 2, 3])\n",
+    "b = b[..., np.newaxis]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "e98b3113",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1. ],\n",
+       "       [ 0.5],\n",
+       "       [ 1. ]])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = np.array([-1, 0.5, 1])\n",
+    "X = X[..., np.newaxis]\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "c8172c21",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +164,7 @@
       "Auto-assigning NUTS sampler...\n",
       "Initializing NUTS using jitter+adapt_diag...\n",
       "Sequential sampling (1 chains in 1 job)\n",
-      "NUTS: [alpha, betas, G0]\n"
+      "NUTS: [alpha, w, G0]\n"
      ]
     },
     {
@@ -154,7 +185,7 @@
        "            }\n",
        "        </style>\n",
        "      <progress value='2000' class='' max='2000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [2000/2000 00:11<00:00 Sampling chain 0, 30 divergences]\n",
+       "      100.00% [2000/2000 00:09<00:00 Sampling chain 0, 850 divergences]\n",
        "    </div>\n",
        "    "
       ],
@@ -169,23 +200,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/larryshamalama/Documents/GitHub/pymc3/pymc3/step_methods/hmc/integration.py:115: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  energy = kinetic - logp\n",
-      "Sampling 1 chain for 1_000 tune and 1_000 draw iterations (1_000 + 1_000 draws total) took 12 seconds.\n",
-      "There were 30 divergences after tuning. Increase `target_accept` or reparameterize.\n",
+      "Sampling 1 chain for 1_000 tune and 1_000 draw iterations (1_000 + 1_000 draws total) took 10 seconds.\n",
+      "There were 851 divergences after tuning. Increase `target_accept` or reparameterize.\n",
+      "The acceptance probability does not match the target. It is 0.8847542943133789, but should be close to 0.8. Try to increase the number of tuning steps.\n",
       "Only one chain was sampled, this makes it impossible to run some convergence checks\n"
      ]
     }
    ],
    "source": [
     "with pm.Model() as model:\n",
-    "    alpha = pm.Gamma(\"alpha\", 1, 1)\n",
-    "    betas = pm.Beta(\"betas\", 1, alpha, shape=K)\n",
-    "    w = pm.Deterministic(\"w\", stick_breaking(betas))\n",
+    "    alpha = pm.Gamma(\"alpha\", 1, 1, shape=1)\n",
+    "#     betas = pm.Beta(\"betas\", 1, alpha, shape=K)\n",
+    "#     w = pm.Deterministic(\"w\", stick_breaking(betas))\n",
+    "    w = pm.Dirichlet(\"w\", a=alpha, shape=K)\n",
     "    \n",
-    "    base_dist = pm.Normal(\"G0\", mu=0, sigma=1, shape=K)\n",
+    "    base_dist = pm.Normal(\"G0\", mu=0, sigma=1, shape=(1, K))\n",
     "    \n",
-    "    dp = pm.Deterministic(\"dp\", at.sum(at.mul(w, at.lt(X, base_dist)), axis=0))\n",
+    "    dp = pm.Deterministic(\n",
+    "        name=\"dp\", \n",
+    "        var=at.sum(at.mul(w, at.gt(X, base_dist)), axis=1),\n",
+    "    )\n",
     "    \n",
     "    trace = pm.sample(\n",
     "        draws=1000,\n",
@@ -195,8 +229,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5dfdef33",
+   "execution_count": 113,
+   "id": "5f887e9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/larryshamalama/anaconda3/envs/pymc3-dev-py39/lib/python3.9/site-packages/arviz/data/inference_data.py:436: UserWarning: The attributes are not same for all groups. Considering only the first group `attrs`\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.15939608, 0.68399616, 0.84316522])"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trace.to_dict()[\"posterior\"][\"dp\"][0].mean(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "12b958c8",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +269,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-57be36b8f695>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mpm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mbase_dist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNormal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"G0\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mK\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     dp = pm.dp.DirichletProcess(\n\u001b[0m\u001b[1;32m      4\u001b[0m         \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"dp\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0malpha\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-104-57be36b8f695>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mpm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mbase_dist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNormal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"G0\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mK\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     dp = pm.dp.DirichletProcess(\n\u001b[0m\u001b[1;32m      4\u001b[0m         \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"dp\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0malpha\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mAttributeError\u001b[0m: module 'pymc3' has no attribute 'dp'"
      ]
     }
@@ -230,8 +293,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 116,
+   "id": "7a7c224d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'aesara.tensor' has no attribute 'newaxis'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-116-68e1c7d9abe3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnewaxis\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'aesara.tensor' has no attribute 'newaxis'"
+     ]
+    }
+   ],
+   "source": [
+    "at.newaxis"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "08bcb678",
+   "id": "dde98afa",
    "metadata": {},
    "outputs": [],
    "source": []
