--- a/notebooks/Section5_2-Dirichlet-Processes.ipynb
+++ b/notebooks/Section5_2-Dirichlet-Processes.ipynb
@@ -1268,9 +1268,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py38",
    "language": "python",
-   "name": "python3"
+   "name": "py38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1282,7 +1282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
