Updating whole repo

--- a/gsoc-meetings/july-14-2021.md
+++ b/gsoc-meetings/july-14-2021.md
@@ -6,14 +6,16 @@
 - Creating `DirichletProcessMixture` to replicate analyses [here](https://docs.pymc.io/notebooks/dp_mix.html) and [here](https://nbviewer.jupyter.org/github/fonnesbeck/Bios8366/blob/master/notebooks/Section5_2-Dirichlet-Processes.ipynb).
 - Testing `pm.Potential`
 	- Getting some bad initial energy errors despite initially successful runs
+	- When no bad initial energy (?), plots seem slightly off.
 
 #### Specific Questions
 
 - Question from last meeting: what do we want to come out from the other end? Perhaps we can draw some inspiration from the [`dirichletprocess`](https://github.com/dm13450/dirichletprocess) R package.
 	- Atoms for basic `DirichletProcess` and mixture component chains for `DirichletProcessMixture`?
 	- Discuss overall design of classes and methods to include
+	- What do we want the base distribution `DirichletProcess` to do?
+	- Basic Dirichlet Process has dirac functions. How to write a likelihood so we can use `obs=...`?
 - Austin mentioned that we can build tests to retrieve the concentation parameter from weights
-- What do we want the base distribution `DirichletProcess` to do?
 - `pm.Potential` in v4: how to make it work?
 	- My understanding is that this is necessary to have a likelihood in the model (`pm.DensityDist` and `pm.Mixture` need to be refactored in v4).
 
