Minor update to meeting agenda

--- a/gsoc-meetings/july-15-2021.md
+++ b/gsoc-meetings/july-15-2021.md
@@ -6,7 +6,7 @@
 - Creating `DirichletProcessMixture` to replicate analyses [here](https://docs.pymc.io/notebooks/dp_mix.html) and [here](https://nbviewer.jupyter.org/github/fonnesbeck/Bios8366/blob/master/notebooks/Section5_2-Dirichlet-Processes.ipynb).
 - Testing `pm.Potential`
 	- Getting some bad initial energy errors despite initially successful runs
-	- When no bad initial energy (?), plots seem slightly off.
+	- When no bad initial energy (?), plots seem slightly off (see [notebook](https://github.com/larryshamalama/pymc3-playground/blob/master/notebooks/test-potential.ipynb)).
 
 #### Specific Questions
 
