Added DP PR link

--- a/gsoc-meetings/july-15-2021.md
+++ b/gsoc-meetings/july-15-2021.md
@@ -1,5 +1,7 @@
 ## Thursday, July 15, 2021
 
+Link to WIP DP [PR](https://github.com/pymc-devs/pymc3/pull/4809) for convenience.
+
 #### What I worked on
 
 - Type checking in `DirichletProcess`
