Added administrative component to meeting agenda

--- a/gsoc-meetings/july-15-2021.md
+++ b/gsoc-meetings/july-15-2021.md
@@ -18,9 +18,13 @@ Link to WIP DP [PR](https://github.com/pymc-devs/pymc3/pull/4809) for convenienc
 	- What do we want the base distribution `DirichletProcess` to do?
 	- Basic Dirichlet Process has dirac functions. How to write a likelihood so we can use `obs=...`?
 - Austin mentioned that we can build tests to retrieve the concentation parameter from weights
-- `pm.Potential` in v4: how to make it work?
-	- My understanding is that this is necessary to have a likelihood in the model (`pm.DensityDist` and `pm.Mixture` need to be refactored in v4).
+- Would `DirichletProcessMixture` integrate better with PyMC3 sampling than `DirichletProcess`?
 
 ### Broad Questions
 
 - Advice on creating tests
+
+### Administrative
+
+- Theory exams on August 3rd and 5th
+- Evaluations due tomorrow
