Updating repo: organizing notebooks in folders

--- a/gsoc-meetings/july-15-2021.md
+++ b/gsoc-meetings/july-15-2021.md
@@ -20,11 +20,11 @@ Link to WIP DP [PR](https://github.com/pymc-devs/pymc3/pull/4809) for convenienc
 - Austin mentioned that we can build tests to retrieve the concentation parameter from weights
 - Would `DirichletProcessMixture` integrate better with PyMC3 sampling than `DirichletProcess`?
 
-### Broad Questions
+#### Broad Questions
 
 - Advice on creating tests
 
-### Administrative
+#### Administrative
 
 - Theory exams on August 3rd and 5th
 - Evaluations due tomorrow
