Added July 22 meeting agenda

--- a/gsoc-meetings/july-22-2021.md
+++ b/gsoc-meetings/july-22-2021.md
@@ -1,1 +1,14 @@
 ## July 22, 2021
+
+#### What I worked on
+
+- [This](https://github.com/larryshamalama/pymc3-playground/blob/master/notebooks/progress/dp-using-likelihood.ipynb) notebook where I implement a dirichlet process with a N(0, 1) base measure
+    - Error `ValueError: operands could not be broadcast together with shapes (38,) (38,) (19,)`: posterior sampling not working
+
+#### Specific Questions
+
+- Discrete index parameters in [this](https://nbviewer.jupyter.org/gist/AustinRochford/591b16363e7fa1ebd55ce3f2fbaeb6a4) notebook for DP Mixtures or any DP?
+
+#### Administrative
+
+- Looking into the future: I'd love to present this project given that I make good progress. Should I look into PyData?
