Updating image take 3

--- a/gsoc-meetings/july-29-2021.md
+++ b/gsoc-meetings/july-29-2021.md
@@ -4,7 +4,8 @@
 
 - Retrieving concentration parameter from weights (notebook [here](https://github.com/larryshamalama/pymc3-playground/blob/master/notebooks/progress/dp-recover-basic-parameters.ipynb))
 	- I suspect that my simulations don't work well with small M values due to precision error. It might not be the case. [Here](https://github.com/larryshamalama/pymc3-playground/blob/master/notebooks/shortcomings/replicate-precision-error.ipynb)
-- Looking into sampling atoms <img src="dp-sampling.png" alt="drawing" width="600"/>
+- Looking into sampling atoms
+	- <img src="dp-sampling.png" alt="drawing" width="400"/>
 	- Next step: including atoms in the likelihood
 
 #### Specific questions
