Last update before meeting

--- a/gsoc-meetings/august-12-2021.md
+++ b/gsoc-meetings/august-12-2021.md
@@ -6,3 +6,7 @@
 	- I suspect that my simulations don't work well with small M values due to precision error. It might not be the case. [Here](https://github.com/larryshamalama/pymc3-playground/blob/master/notebooks/shortcomings/replicate-precision-error.ipynb)
 - Posterior DP in numpy (see [notebook](https://github.com/larryshamalama/pymc3-playground/blob/master/notebooks/progress/dp-posterior-numpy.ipynb))
 - Integrating atoms with weights for DP prior
+
+#### Broad questions
+
+- Thinking about API design?
