Adding progress on two-level sampling

--- a/notebooks/progress/dp-recover-basic-parameters.ipynb
+++ b/notebooks/progress/dp-recover-basic-parameters.ipynb
@@ -886,8 +886,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c6947089",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DirichletProcess:\n",
+    "    \"\"\"\n",
+    "    class to retrieve data-generating parameters (M and mu)\n",
+    "    \n",
+    "    posterior method not ready\n",
+    "    \"\"\"\n",
+    "    def __init__(self, M, rng, size, observed=None):\n",
+    "        self.M = M\n",
+    "        self.rng = rng\n",
+    "        self.size = size\n",
+    "        \n",
+    "        self.N, self.K = size\n",
+    "        \n",
+    "        self.atoms, self.recovered_betas = create_dp_samples(self.M, self.rng, self.size)\n",
+    "    \n",
+    "        self.observed = observed\n",
+    "        self.n = len(observed)\n",
+    "        \n",
+    "    @property\n",
+    "    def recover_prior_params(self):\n",
+    "        \n",
+    "        with pm.Model(rng_seeder=self.rng) as model:\n",
+    "            α = pm.Uniform(\"α\", 0., 10.)\n",
+    "            \n",
+    "            # K - 1 because the Kth weight is 1 - weights.sum()\n",
+    "            β = pm.Beta(\"β\", 1., α, observed=self.recovered_betas)\n",
+    "            µ = pm.Normal(\"µ\", mu=0., sigma=5.)\n",
+    "            \n",
+    "            G0 = pm.Normal(\"G0\", mu=µ, sigma=3., observed=self.atoms)\n",
+    "            \n",
+    "            return pm.sample(draws=2000, chains=1)\n",
+    "        \n",
+    "    @property\n",
+    "    def posterior(self):\n",
+    "        \n",
+    "        if self.observed is None:\n",
+    "            raise ValueError(\"Forgot to provide some observations to condition on!\")\n",
+    "        \n",
+    "        with pm.Model(rng_seeder=self.rng) as model:\n",
+    "            α = pm.Uniform(\"α\", 0., 10.)\n",
+    "            \n",
+    "            β = pm.Beta(\"β\", 1., α)\n",
+    "            µ = pm.Normal(\"µ\", mu=0., sigma=5.)\n",
+    "            \n",
+    "            # latent mixture component for posterior\n",
+    "            idx = pm.Bernoulli(\"p\", p=α/(α + self.n))\n",
+    "            G0 = pm.Normal(\"G0\", mu=µ, sigma=3.)\n",
+    "            \n",
+    "            categorical_indicator = pm.Categorical(\"categorical\", np.tile(1/self.n, self.n))\n",
+    "            \n",
+    "            dp_post_comps = [\n",
+    "                at.as_tensor_variable(self.observed)[categorical_indicator],\n",
+    "                G0,\n",
+    "            ]\n",
+    "            \n",
+    "            Gn = pm.Deterministic(\"Gn\", dp_post_comps[idx])\n",
+    "            \n",
+    "            return pm.sample(draws=2000, chains=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13df4f72",
    "metadata": {},
    "outputs": [],
    "source": []
