--- a/notebooks/step-by-step/dirichlet-process-pymc3-class.ipynb
+++ b/notebooks/step-by-step/dirichlet-process-pymc3-class.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "f900d8f4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You are running the v4 development version of PyMC3 which currently still lacks key features. You probably want to use the stable v3 instead which you can either install via conda or find on the v3 GitHub branch: https://github.com/pymc-devs/pymc3/tree/v3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pymc3 as pm\n",
@@ -24,6 +16,8 @@
     "from scipy import stats as st\n",
     "\n",
     "import aesara\n",
+    "\n",
+    "import arviz as az\n",
     "\n",
     "%config InlineBackend.figure_format = \"retina\"\n",
     "%matplotlib inline"
@@ -36,77 +30,136 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "K = 50; N = 300\n",
+    "K = 50; N = 50\n",
     "M = 2; mu = 2.\n",
-    "rng = np.random.RandomState(seed=34)"
+    "rng = np.random.RandomState(seed=34)\n",
+    "y = rng.normal(loc=mu, scale=2., size=[N,])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "98b933fb",
+   "execution_count": 3,
+   "id": "77325ee7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_weights(M, rng, K):\n",
-    "\n",
-    "    betas = rng.beta(1., M, size=(K-1,))\n",
+    "def stick_breaking(betas):\n",
+    "    \"\"\"\n",
+    "    betas ~ Beta(1, alpha)\n",
+    "    \"\"\"\n",
+    "    sticks = at.concatenate(\n",
+    "        [[1]],\n",
+    "        at.cumprod(1 - betas[:-1])\n",
+    "    )\n",
     "    \n",
-    "    sticks = np.concatenate(([1], np.cumprod(1 - betas[:-1])))\n",
-    "\n",
-    "    product = betas * sticks\n",
+    "    product = at.mul(betas, sticks)\n",
     "    \n",
-    "    return np.append(product, 1 - product.sum()) # shape = (K,)\n",
-    "\n",
-    "\n",
-    "def stick_glueing(weights):\n",
-    "    \n",
-    "    denominator = np.concatenate(([1], -weights[:-1]))\n",
-    "    denominator = np.cumsum(denominator)\n",
-    "    \n",
-    "    return weights[:-1]/denominator[:-1] # shape = (K - 1,)\n",
-    "\n",
-    "\n",
-    "def create_dp_samples(M, rng, K):\n",
-    "    \n",
-    "    atoms = rng.normal(loc=mu, scale=3., size=(K,))\n",
-    "    weights = generate_weights(M, rng, K)\n",
-    "\n",
-    "    return rng.choice(a=atoms, p=weights, size=(K,))"
+    "    return at.concatenate(\n",
+    "        [\n",
+    "            product,\n",
+    "            [1 - at.sum(product)],\n",
+    "        ]\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "d631ba7f",
+   "execution_count": 61,
+   "id": "5e77e97e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with pm.Model() as model:\n",
+    "    \n",
+    "    concentration = pm.InverseGamma(\"concentration\", alpha=0.1, beta=0.1)\n",
+    "    \n",
+    "    betas = pm.Beta(\"betas\", 1., concentration, shape=(K,))\n",
+    "    weights = pm.Deterministic(\"weights\", stick_breaking(betas))\n",
+    "    \n",
+    "    G0 = pm.Normal(name=\"G0\", mu=0., sigma=3., shape=(K+1,))\n",
+    "    idx = pm.Bernoulli(name=\"post-mixture-idx\", p=at.mul(concentration, at.inv(concentration + len(y))))\n",
+    "    \n",
+    "\n",
+    "#     y_atoms = pm.Deterministic(\n",
+    "#         name=\"post-atoms\", \n",
+    "#         var=at.as_tensor_variable(y)[cat_idx],\n",
+    "#     )\n",
+    "    \n",
+    "#     Gn = pm.Deterministic(\n",
+    "#         name=\"Gn\",\n",
+    "#         var=G0[idx],\n",
+    "#     )\n",
+    "    \n",
+    "    prior = pm.sample_prior_predictive(samples=1000,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "99ed9ad3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 2.72786108,  3.57974145, -1.86273651, ...,  3.57974145,\n",
-       "        -0.46265869, -0.46265869],\n",
-       "       [-0.84844108,  3.57974145,  3.57974145, ...,  3.57974145,\n",
-       "         3.57974145,  3.57974145],\n",
-       "       [ 2.72786108,  3.57974145,  3.57974145, ..., -1.00996505,\n",
-       "         3.57974145,  3.57974145],\n",
-       "       ...,\n",
-       "       [-2.07445279, -1.00996505,  3.57974145, ...,  3.57974145,\n",
-       "        -0.84844108,  3.57974145],\n",
-       "       [-0.84844108,  3.57974145, -0.84844108, ..., -1.00996505,\n",
-       "        -1.00996505, -0.46265869],\n",
-       "       [ 0.84400093,  2.88729209, -1.00996505, ..., -0.84844108,\n",
-       "         2.72786108,  3.57974145]])"
+       "0.1774097049859114"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dp_samples = create_dp_samples(M=3., rng=rng, K=50)\n",
-    "dp_samples"
+    "prior[\"betas\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e89f2ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with pm.Model():\n",
+    "    norm_obj = pm.Normal(\"norm\", mu=0., sigma=1.)\n",
+    "    norm = pm.Normal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed22d3ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "norm.rv_op.rng_fn(rng, size=[4, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d631ba7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with pm.Model() as model:\n",
+    "    idx = pm.Categorical(name=\"cat\", p=np.array([0.1, 0.2, 0.3, 0.4]))\n",
+    "    \n",
+    "    y_tensor = at.as_tensor_variable(y)\n",
+    "    y_atoms = pm.Deterministic(name=\"y_atoms\", var=y_tensor[idx])\n",
+    "    \n",
+    "    prior = pm.sample_prior_predictive(samples=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "645a5cb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.unique(prior[\"y_atoms\"])"
    ]
   },
   {
