--- a/notebooks/step-by-step/dirichlet-process-pymc3-class.ipynb
+++ b/notebooks/step-by-step/dirichlet-process-pymc3-class.ipynb
@@ -2,10 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "f900d8f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are running the v4 development version of PyMC3 which currently still lacks key features. You probably want to use the stable v3 instead which you can either install via conda or find on the v3 GitHub branch: https://github.com/pymc-devs/pymc3/tree/v3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'2.0.12'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pymc3 as pm\n",
@@ -20,18 +38,20 @@
     "import arviz as az\n",
     "\n",
     "%config InlineBackend.figure_format = \"retina\"\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "aesara.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "c52418a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "K = 50; N = 50\n",
-    "M = 2; mu = 2.\n",
+    "K = 20; N = 50\n",
+    "M = 5; mu = 2.\n",
     "rng = np.random.RandomState(seed=34)\n",
     "y = rng.normal(loc=mu, scale=2., size=[N,])"
    ]
@@ -48,8 +68,10 @@
     "    betas ~ Beta(1, alpha)\n",
     "    \"\"\"\n",
     "    sticks = at.concatenate(\n",
-    "        [[1]],\n",
-    "        at.cumprod(1 - betas[:-1])\n",
+    "        [\n",
+    "            [1],\n",
+    "            at.cumprod(1 - betas[:-1])\n",
+    "        ],\n",
     "    )\n",
     "    \n",
     "    product = at.mul(betas, sticks)\n",
@@ -64,76 +86,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 57,
    "id": "5e77e97e",
    "metadata": {},
    "outputs": [],
    "source": [
     "with pm.Model() as model:\n",
     "    \n",
-    "    concentration = pm.InverseGamma(\"concentration\", alpha=0.1, beta=0.1)\n",
-    "    \n",
-    "    betas = pm.Beta(\"betas\", 1., concentration, shape=(K,))\n",
-    "    weights = pm.Deterministic(\"weights\", stick_breaking(betas))\n",
-    "    \n",
-    "    G0 = pm.Normal(name=\"G0\", mu=0., sigma=3., shape=(K+1,))\n",
-    "    idx = pm.Bernoulli(name=\"post-mixture-idx\", p=at.mul(concentration, at.inv(concentration + len(y))))\n",
-    "    \n",
+    "    concentration = pm.InverseGamma(\"concentration\", alpha=1, beta=1)\n",
     "\n",
-    "#     y_atoms = pm.Deterministic(\n",
-    "#         name=\"post-atoms\", \n",
-    "#         var=at.as_tensor_variable(y)[cat_idx],\n",
-    "#     )\n",
+    "    betas = pm.Beta(\"betas\", 1., concentration + len(y), shape=(K,))\n",
+    "    weights = pm.Deterministic(\"weights\", stick_breaking(betas))\n",
+    "\n",
+    "    G0 = pm.Normal(name=\"G0\", mu=0., sigma=3.)\n",
     "    \n",
-    "#     Gn = pm.Deterministic(\n",
-    "#         name=\"Gn\",\n",
-    "#         var=G0[idx],\n",
-    "#     )\n",
+    "    # idx only used for posterior sampling\n",
+    "    idx = pm.Bernoulli(name=\"post-mixture-idx\", p=at.mul(concentration, at.inv(concentration + len(y))))\n",
+    "\n",
+    "    cat_idx = pm.Categorical(name=\"cat-idx\", p=np.ones_like(y)/len(y), shape=(K+1,))\n",
     "    \n",
+    "    y_atoms = pm.Potential(\n",
+    "        name=\"atoms\",\n",
+    "        var=lambda \n",
+    "    )\n",
+    "    \n",
+    "    #     Gn = pm.Deterministic(\n",
+    "    #         name=\"Gn\",\n",
+    "    #         var=G0[idx],\n",
+    "    #     )\n",
     "    prior = pm.sample_prior_predictive(samples=1000,)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 58,
+   "id": "31232d37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.01781906, 0.0188505 , 0.01723841, 0.01735289, 0.01597581,\n",
+       "       0.01756036, 0.01639762, 0.01645864, 0.01592132, 0.01568358,\n",
+       "       0.01564189, 0.01474068, 0.01410327, 0.01428455, 0.01398772,\n",
+       "       0.75798372])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prior[\"weights\"].mean(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "id": "99ed9ad3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1774097049859114"
+       "array([ 1.29587531,  4.52209386, -0.60050415,  1.53567575, -0.56298375,\n",
+       "        1.44354261,  3.67770284,  3.8512128 ,  1.29587531, -1.12235399,\n",
+       "        1.29587531, -0.92795379,  0.90935141,  0.70988939,  0.41779605,\n",
+       "        3.8512128 ])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prior[\"betas\"].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e89f2ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with pm.Model():\n",
-    "    norm_obj = pm.Normal(\"norm\", mu=0., sigma=1.)\n",
-    "    norm = pm.Normal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed22d3ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "norm.rv_op.rng_fn(rng, size=[4, 2, 3])"
+    "y[prior[\"cat-idx\"][0]]"
    ]
   },
   {
@@ -155,99 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "645a5cb0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.unique(prior[\"y_atoms\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fac77e20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class DirichletProcess:\n",
-    "    \n",
-    "    def __init__(self, M, rng, K):\n",
-    "        self.M = M\n",
-    "        self.K = K\n",
-    "        \n",
-    "        self.samples = create_dp_samples(M, rng, K)\n",
-    "        self.rng = rng\n",
-    "    \n",
-    "    def run(self):\n",
-    "        \n",
-    "        atoms, counts = np.unique(self.samples, return_counts=True)\n",
-    "        \n",
-    "        # stick-glueing assumes decreasing weights\n",
-    "        index = np.argsort(counts)\n",
-    "        counts = counts[index][::-1]\n",
-    "        atoms = atoms[index][::-1]\n",
-    "        \n",
-    "        weights = np.array(counts)/counts.sum() # empirical weights\n",
-    "        \n",
-    "        recovered_betas = stick_glueing(weights)\n",
-    "        \n",
-    "        with pm.Model(rng_seeder=rng) as model:\n",
-    "            α = pm.Uniform(\"α\", 0., 10.)\n",
-    "            \n",
-    "            # K - 1 because the Kth weight is 1 - weights.sum()\n",
-    "            β = pm.Beta(\"β\", 1., α, observed=recovered_betas)\n",
-    "            µ = pm.Normal(\"µ\", mu=0., sigma=5.)\n",
-    "            \n",
-    "            G0 = pm.Normal(\"G0\", mu=µ, sigma=3., observed=atoms)\n",
-    "            \n",
-    "            self.posterior = pm.sample(draws=2000, chains=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50825527",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dp = DirichletProcess(M, rng, K)\n",
-    "dp.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb8b2e43",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_ = pm.plot_trace(dp.posterior)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2dec1ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dp.posterior.to_dict()[\"posterior\"][\"α\"].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d19225da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dp.samples"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97ea98b6",
+   "id": "3b1adeba",
    "metadata": {},
    "outputs": [],
    "source": []
