updating repo prior to meeting

--- a/gsoc-meetings/august-19-2021.md
+++ b/gsoc-meetings/august-19-2021.md
@@ -1,4 +1,32 @@
 ## Thursday, August 19, 2021
 
+See notebooks [here](https://github.com/larryshamalama/pymc3-playground/blob/master/notebooks/step-by-step/test-multiple-dp-samples.ipynb) and [here](https://github.com/larryshamalama/pymc3-playground/blob/master/notebooks/step-by-step/test-two-level-sampling.ipynb)
+
 #### What I worked on
 
+- First, getting the exercise mentioned last week done right
+- Retrieving data-generating parameters with using two-level sampling
+
+#### Specific question
+
+- Using `rng.multinomial` still has some atoms that are unobserved. Because Beta r.v.'s cannot be observed to be 0 or 1, I temporarily discard samples with unobserved atoms. This leads to right results. Is this okay?
+- Should we start thinking about API design?
+    - Should `DirichletProcess` be its own class (akin to GPs) or inherit from `RandomVariable`?
+    - Ultimately, my understanding is that we want to be able to something like:
+
+```{python}
+with pm.Model() as model:
+    G0 = pm.Normal("G0", mu=0., sigma=3.)
+    dp = pm.DirichletProcess("dp", concentration=5., base_dist=G0, observed=y)
+```
+
+- Post-GSoC: will we be able to continue to meet? Are there funds (for students and mentors) to continue working on this?
+- Minor: `pm.sample_prior_predictive()` does not seem to work with Aesara 2.1.3
+
+#### Administrative
+
+ - [Work Submission Guidelines](https://developers.google.com/open-source/gsoc/help/work-product) and last evaluation
+
+#### Personal level
+
+- How to stay more involved?
