pm.sample for StickBreakingWeights work

--- a/notebooks/numpy/dp-posterior-numpy.ipynb
+++ b/notebooks/numpy/dp-posterior-numpy.ipynb
@@ -38,7 +38,7 @@
    "id": "5299a263",
    "metadata": {},
    "source": [
-    "<img src=\"dp-example-9.png\" width=500>"
+    "<img src=\"../progress/dp-example-9.png\" width=500>"
    ]
   },
   {
